# widget-sensors

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  create_project.bat
.github/workflows/: build.yml
client/: README.md
client/sample/: shutdown-browser.bat  start-browser.bat
main/: main.cpp  version.h
main/logging/: logging.h  logging_macros.h
main/resources/win/: icon_attribution.txt  main.exe.manifest  resource.h  windows.rc
main/rtss/: rtss.cpp  rtss.hpp
main/websocket/: server.cpp  server.hpp
plugins/: CMakeLists.txt  README.md
plugins/hwinfo/: CMakeLists.txt
plugins/hwinfo/resources/win/: windows.rc
plugins/hwinfo/src/: hwinfo.cpp  hwinfo.hpp  main.cpp  plugin.def
plugins/obs/: CMakeLists.txt
plugins/obs/resources/win/: main.exe.manifest  windows.rc
plugins/obs/src/: main.cpp  obs.cpp  obs.hpp
plugins/osu/: CMakeLists.txt
plugins/osu/resources/html/: console.html
plugins/osu/resources/win/: resource.h  windows.rc
plugins/osu/src/: main.cpp  osu.cpp  osu.hpp
plugins/rebar/: CMakeLists.txt
plugins/rebar/resources/win/: resource.h  windows.rc
plugins/rebar/src/: main.cpp  plugin.def
plugins/tracker/: CMakeLists.txt
plugins/tracker/resources/win/: windows.rc
plugins/tracker/src/: main.cpp  plugin.def
plugins/tracker/src/core/: eventsink.cpp  eventsink.h  process_tracker.cpp  process_tracker.hpp  process_watcher.cpp  process_watcher.hpp
plugins/twitch/: CMakeLists.txt
plugins/twitch/resources/html/: console.html
plugins/twitch/resources/win/: windows.rc
plugins/twitch/src/: main.cpp  plugin.def  twitch.cpp  twitch.hpp
power/: CMakeLists.txt  main.cpp
power/resources/win/: main.exe.manifest  windows.rc
shared/: base64_util.hpp  ignore_list.cpp  ignore_list.hpp  logger.hpp  parser_util.cpp  parser_util.hpp  platform.hpp  power_util.cpp  power_util.hpp  resource_util.cpp  resource_util.hpp  sha256_util.hpp  shell_util.cpp  shell_util.hpp  simple_db.cpp  simple_db.hpp  string_util.h  widget_plugin.h
src/: main.cpp
src/shared/: platform.h
src/util/: certificate_util.hpp  certificate_util_win.cpp  datetime_util.h
